number changed, location on click added

--- a/pages/about.html
+++ b/pages/about.html
@@ -67,16 +67,16 @@
                     </div>
                     <div id="call-us">
                         <img class="contact-icon" src="../assets/svg/phone-black.svg" alt="Location Icon" />
-                        <div class="contact-details" onclick="redirectTo('tel:919977601404')">
+                        <div class="contact-details" onclick="redirectTo('tel:9926419239')">
                             <div class="detail-title model-style">Call Us</div>
-                            <div class="detail-subtitle model-style">+91-99776 01404</div>
+                            <div class="detail-subtitle model-style">+91-99264 19239</div>
                         </div>
                     </div>
                     <div id="email-us">
                         <img class="contact-icon" src="../assets/svg/email-black.svg" alt="Location Icon" />
                         <div class="contact-details" onclick="redirectTo('mailto:decoratorsbhawani@gmail.com')">
                             <div class="detail-title model-style">Email Us</div>
-                            <div class="detail-subtitle model-style">decoratorsbhawani@gmail.com</div>
+                            <div class="detail-subtitle model-style">bhdecoretors214@gmail.com</div>
                         </div>
                     </div>
                     <div class="model-social-links">
@@ -203,7 +203,7 @@
         <div id="footer-title">BHAWANI DECORATORS</div>
         <div id="footer-links">
             <div id="contact">
-                <div id="location">
+                <div id="location" onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
@@ -214,7 +214,7 @@
                     <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-99264 19239</div>
                         <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
+                        <div class="detail-subtitle">bhdecoretors214@gmail.com</div>
                     </div>
                 </div>
             </div>
