--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -86,11 +86,11 @@
         </form>
 
         <div class="model-social-links">
-            <img class="model-social-icon" onclick="redirectTo('tel:919977601404')"
+            <img class="model-social-icon" onclick="redirectTo('tel:9926419239')"
                 src="../assets/svg/call-model-icon.svg" alt="Caller Icon" />
-            <img class="model-social-icon" onclick="redirectTo('mailto:decoratorsbhawani@gmail.com')"
+            <img class="model-social-icon" onclick="redirectTo('mailto:bhdecoretors214@gmail.com')"
                 src="../assets/svg/mail-model-icon.svg" alt="E-Mail Icon" /><img class="model-social-icon"
-                onclick="blankRedirect('https\://wa.me/919827917456')" src="../assets/svg/whatsapp-model-icon.svg"
+                onclick="blankRedirect('https\://wa.me/916264865070')" src="../assets/svg/whatsapp-model-icon.svg"
                 alt="Whatsapp Icon" />
             <img class="model-social-icon" onclick="blankRedirect('https\://www.instagram.com/bhawanidecorators/')"
                 src="../assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
@@ -107,7 +107,7 @@
         <div id="footer-title">BHAWANI DECORATORS</div>
         <div id="footer-links">
             <div id="contact">
-                <div id="location">
+                <div id="location" onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
@@ -118,7 +118,7 @@
                     <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-99264 19239</div>
                         <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
+                        <div class="detail-subtitle">bhdecoretors214@gmail.com</div>
                     </div>
                 </div>
             </div>
