--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -226,7 +226,7 @@
         <div id="footer-title">BHAWANI DECORATORS</div>
         <div id="footer-links">
             <div id="contact">
-                <div id="location">
+                <div id="location" onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
@@ -237,7 +237,7 @@
                     <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-99776 01404</div>
+                        <div class="detail-subtitle">+91-99264 19239</div>
                         <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">decoratorsbhawani@gmail.com</div>
+                        <div class="detail-subtitle">bhdecoretors214@gmail.com</div>
                     </div>
                 </div>
             </div>
