--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -72,15 +72,15 @@
             <div class="main-heading">Send Us A Message</div>
             <div class="text-box">
                 <label for="name">Your Name</label><br>
-                <input type="text" name="name" id="user-name">
+                <input type="text" name="name" id="user-name" required>
             </div>
             <div class="text-box">
                 <label for="mail">Mail</label><br>
-                <input type="email" name="email" id="user-main">
+                <input type="email" name="email" id="user-main" required>
             </div>
             <div class="text-box">
                 <label for="message">Message</label><br>
-                <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+                <textarea name="message" id="user-message" cols="30" rows="10" required></textarea>
             </div>
             <button class="send-mail-btn" type="submit">Send</button>
         </form>
