--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -41,15 +41,15 @@
                     <div class="main-heading">Send Us A Message</div>
                     <div class="text-box">
                         <label for="name">Your Name</label><br>
-                        <input type="text" name="name" id="user-name">
+                        <input type="text" name="name" id="user-name" required>
                     </div>
                     <div class="text-box">
                         <label for="mail">Mail</label><br>
-                        <input type="email" name="email" id="user-main">
+                        <input type="email" name="email" id="user-main" required>
                     </div>
                     <div class="text-box">
                         <label for="message">Message</label><br>
-                        <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+                        <textarea name="message" id="user-message" cols="30" rows="10" required></textarea>
                     </div>
                     <button class="send-mail-btn" type="submit">Send</button>
                 </form>
@@ -114,7 +114,7 @@
 
 
     <header>
-        <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
+        <img id="header-logo" onclick="redirectHome()" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
         <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title-2.png" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
@@ -290,7 +290,8 @@
         <div id="footer-title">BHAWANI DECORATORS</div>
         <div id="footer-links">
             <div id="contact">
-                <div id="location" onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
+                <div id="location"
+                    onclick="blankRedirect('https\://maps.google.com/?q=Science College Road, Chantidih, Bilaspur, Chhattisgarh')">
                     <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
@@ -306,7 +307,7 @@
                         <div class="detail-subtitle">+91-98279 17456</div>
                     </div>
                 </div>
-                <div id="email-us">
+                <div id="email-us" onclick="redirectTo('mailto:bhdecoretors214@gmail.com')">
                     <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
