number changed on model box

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     </div>
                     <div id="call-us">
                         <img class="contact-icon" src="assets/svg/phone-black.svg" alt="Location Icon" />
-                        <div class="contact-details" onclick="redirectTo('tel:9926419239')">
+                        <div class="contact-details" onclick="redirectTo('tel:919827917456')">
                             <div class="detail-title model-style">Call Us</div>
-                            <div class="detail-subtitle model-style">+91-99264 19239</div>
+                            <div class="detail-subtitle model-style">+91-98279 17456</div>
                         </div>
                     </div>
                     <div id="email-us">
@@ -138,8 +138,7 @@
             <img id="hero-section-logo" src="assets/svg/hero-section-logo.svg">
             <div id="left-side">
                 <div id="text-binding">
-                    <div>Your Home Is Beautiful,</div>
-                    <div>Don't Believe Us?</div>
+                    <div>Art Of Living stylishly</div>
                     <p>We pleded to deliever satisfactory services to our customers. Our products guarantees to enhance
                         the beauty of your
                         home. make your home more stunning and beautiful. Consider Us for your next home decoration
@@ -297,8 +296,8 @@
                     <img class="contact-icon" src="assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-99264 19239</div>
                         <div class="detail-subtitle">+91-98279 17456</div>
+                        <div class="detail-subtitle">+91-99264 19239</div>
                     </div>
                 </div>
                 <div id="email-us" onclick="redirectTo('mailto:bhdecoretors214@gmail.com')">
@@ -346,5 +345,3 @@
 </body>
 
 </html>
-<!--<meta name="google-site-verification" content="uDpw7b__U7Xbh7JdTiUif3XSQkkmNq_JPDOw7Oy3wVI" />-->
-<!--google-site-verification=zHjUBhWO9zCrQFOqO25ElwCORf9wwxzDV5SHdKFfJoQ-->
