lorem Ipsum removed

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <!--Why Choose Us Starts -->
     <div id="why-choose-us">
         <h1>Why Choose Us?</h1>
-        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet ullamcorper proin morbi tellus,
-            parturient lacus, volutpat, turpis. Leo placerat egestas erat urna, in sit ullamcorper praesent. Diam
-            gravida a quis nibh ut eget.</span>
+        <span>We Are Provinding Services For Interior Desiging For More Than 21 Years And We Are Keep Improving And
+            Upgrading Our Service With The Trends And Demands. Our Installation Experience Supervised By Expert Teams To
+            Give You Best Experience Possible For Your Home/Office Design.</span>
     </div>
     <!--Why Choose Us Ends-->
 
