--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
             </div>
         </div>
         <div id="copyright-claims">Copyrights @2022 Bhawani Decorators, All Right Reserved. Design and Developed
-            by&nbsp;<a class="ref-link" href="https://www.instagram.com/creativedroplets/" target="_blank">CreativeDroplets</a>
-            &nbsp;With&nbsp;<a class="ref-link" href="https://www.instagram.com/graphityfactory18/"
-                target="_blank">GraphityFactory</a>.
+            by <span class="ref-link" onclick="('https\://www.instagram.com/creativedroplets/')">CreativeDroplets</span>
+            With <span class="ref-link"
+                onclick="('https\://www.instagram.com/graphityfactory18/')">GraphityFactory</span>.
         </div>
     </footer>
     <!--Footer Ends-->
